# test5

./: CMakeLists.txt
app/: AnalyticsManager.cpp  AnalyticsManager.h  AuthManager.cpp  AuthManager.h  CollaborationManager.cpp  CollaborationManager.h  CommentManager.cpp  CommentManager.h  DatabaseManager.cpp  DatabaseManager.h  FileManager.cpp  FileManager.h  FileUtils.cpp  FileUtils.h  Frontend.cpp  Frontend.h  README.md  RecommendationEngine.cpp  RecommendationEngine.h  app.js  config.h  index.html  main.cpp
app/frontend/: app.js  index.html  style.css
